<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="#FFF"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/NormalTextView"
            android:text="@string/lighting_purple_group"/>

        <Button
            android:id="@+id/btnPurple"
            style="@style/ColorPurpleButton"
            android:stateListAnimator="@drawable/anim_state"
            android:clickable="true"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/NormalTextView"
            android:text="@string/lighting_white_group"/>

        <Button
            android:id="@+id/btnWhiteGroup"
            style="@style/ColorWhiteButton"
            android:layout_marginTop="5dp"
            android:stateListAnimator="@drawable/anim_state"
            android:clickable="true"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/NormalTextView"
            android:text="@string/lighting_red_group"/>

        <Button
            android:id="@+id/btnRedGroup"
            style="@style/ColorRedGroup2Button"
            android:layout_marginTop="5dp"
            android:stateListAnimator="@drawable/anim_state"
            android:clickable="true"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/NormalTextView"
            android:text="@string/lighting_blue_group"/>

        <Button
            android:id="@+id/btnBlueGroup"
            style="@style/ColorBlueButton"
            android:layout_marginTop="5dp"
            android:stateListAnimator="@drawable/anim_state"
            android:clickable="true"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/NormalTextView"
            android:text="@string/lighting_orange_group" />

        <Button
            android:id="@+id/btnOrangeGroup"
            style="@style/ColorOrangeButton"
            android:stateListAnimator="@drawable/anim_state"
            android:clickable="true"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/NormalTextView"
            android:text="@string/lighting_yellow_group"/>

        <Button
            android:id="@+id/btnYellowGroup"
            style="@style/ColorYellowButton"
            android:layout_marginTop="5dp"
            android:stateListAnimator="@drawable/anim_state"
            android:clickable="true"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/NormalTextView"
            android:text="@string/title_hint_lighting_time" />

        <EditText
            android:id="@+id/etLightingTime"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:text="5"
            android:hint="@string/toast_input_lighting_seconds"/>

    </FrameLayout>

</LinearLayout>