<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <EditText
            android:id="@+id/etAssetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/edit_hint_good"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <EditText
            android:id="@+id/etAssetNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:drawableEnd="@drawable/ic_crop_free_black_24dp"
            android:hint="@string/edit_hint_number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:visibility="invisible"
        tools:visibility="visible"
        android:background="@color/app_color_theme_5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/content_selected_tag"/>

        <TextView
            android:id="@+id/tvBindingTagName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:textColor="@android:color/white"
            tools:text="Tag Name"/>

        <TextView
            android:id="@+id/tvBindingTagMac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            tools:text="Tag MAC"/>

        <TextView
            android:id="@+id/tvBindingHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp"
            android:text="@string/content_to_bind"/>

    </LinearLayout>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/btnLightSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:text="@string/btn_light_setting"
        app:qmui_radius="4dp"/>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/btnSelectTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:text="@string/btn_select_tag"
        app:qmui_radius="4dp"/>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/btnBindTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:text="@string/btn_finish_binding"
        android:textColor="@color/app_color_theme_2"
        app:qmui_radius="4dp"
        app:qmui_borderColor="@color/app_color_theme_2" />

</LinearLayout>