<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_refresh"
        android:layout_gravity="center"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srScan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_bluetooth2"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:text="5"
            android:hint="@string/toast_effective_seconds_range"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/btnLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:text="@string/btn_light"
        app:qmui_radius="4dp"/>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/btnLightSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:text="@string/btn_light_setting"
        app:qmui_radius="4dp"/>
</LinearLayout>