<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.qmuiteam.qmui.widget.grouplist.QMUIGroupListView
        android:id="@+id/listViewTransmissionPower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btnGetTransmissionPower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/btn_get_transmission_power"
            app:qmui_radius="4dp"/>

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btnSetTransmissionPower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/btn_set_transmission_power"
            android:textColor="@color/colorBlue"
            app:qmui_backgroundColor="@color/colorBlue3"
            app:qmui_borderColor="@color/colorBlue"
            app:qmui_radius="4dp"/>

    </LinearLayout>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/btnFactoryTransmissionPower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:text="@string/btn_factory_transmission_power"
        android:textColor="@color/colorRed"
        app:qmui_backgroundColor="@color/colorBlue3"
        app:qmui_borderColor="@color/colorRed" />

</LinearLayout>